# audioserve

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
audioserve/: __init__.py  cli.py  client.py  config.py  engine.py
audioserve/api/: grpc_server.py  rest_server.py  schemas.py
audioserve/core/: preprocessing.py  scheduler.py  streaming.py  vad.py
audioserve/cuda/: __init__.py  ctc_beam_search.py  hello_kernel.py  mel_spectrogram.py
audioserve/models/: base.py  diarization.py  parakeet.py  registry.py  wav2vec2.py  whisper.py
audioserve/proto/: audioserve.proto  audioserve_pb2.py  audioserve_pb2.pyi  audioserve_pb2_grpc.py
benchmarks/: benchmark_full.py  benchmark_whisper.py  results.json
examples/: quickstart.py  test_grpc.py  test_real_audio.py  test_server.py
tests/: conftest.py  test_api.py  test_config.py  test_ctc_beam_search.py  test_engine.py  test_mel_cuda.py  test_multi_model.py  test_parakeet.py  test_preprocessing.py  test_registry.py  test_scheduler.py  test_streaming.py
